feat: add booking service
